--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flatiron Task Lister</title>
+  <title>Ed - Flatiron Task Lister</title>
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     </form>
 
     <div id="list">
-      <h2>My Todos</h2>
+      <h2>What I need to do:</h2>
       <ul id="tasks">
       </ul>
     </div>
